@@ -245,7 +245,7 @@ public class WMediaDialog extends Window implements EventListener
 		{
 			Clob clob = (Clob)m_data;
 			long length = clob.length() > 100 ? 100 : clob.length();
-			String data = ((Clob)m_data).getSubString(1, new Long(length).intValue());
+			String data = ((Clob)m_data).getSubString(1, Long.valueOf(length).intValue());
 			if (data.toUpperCase().indexOf("<html>") >= 0)
 			{
 				contentType = "text/html";
